# messaging

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  eslint.config.mjs  package.json  postcss.config.mjs  pyproject.toml  tailwind.config.js  tsconfig.json  update-assets.ts  vite.config.ts
docs/: chat.md
messaging/: __init__.py  hooks.py
messaging/config/: __init__.py
messaging/messaging/api/: twilio_sms.py  twilio_webhook.py
messaging/messaging/api/chat/: __init__.py  api.py  formatting.py  helpers.py  links.py  push.py  retrieve.py  send.py  types.py
messaging/messaging/custom/: communication.json  contact.json  contact.py  contact_phone.json  newsletter.json  test_contact.py
messaging/messaging/doctype/group_text_message/: __init__.py  group_text_message.js  group_text_message.json  group_text_message.py  test_group_text_message.py
messaging/messaging/doctype/group_text_messaging_group/: group_text_messaging_group.json  group_text_messaging_group.py
messaging/messaging/doctype/messaging_group/: messaging_group.js  messaging_group.json  messaging_group.py  test_messaging_group.py
messaging/messaging/doctype/messaging_group_member/: messaging_group_member.json  messaging_group_member.py
messaging/messaging/doctype/messaging_settings/: messaging_settings.js  messaging_settings.json  (+2 more)
messaging/messaging/hooks/: contact.py
messaging/overrides/: contact.py  contact_phone.py  newsletter.py
messaging/public/css/: chat.css
messaging/public/js/: chat.bundle.ts  communication.js  contact.js  contact_list.js  vendor-chat.d.ts.disabled
(+19 files in other folders)
