[project]
name = "messaging"
authors = [
    { name = "Avunu LLC", email = "mail@avu.nu"}
]
description = "Messaging functionality for Frappe Sites"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "phonenumbers",
    "pywebpush",
    "twilio",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"


[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "E501", # line too long
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
